// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ProfileFooter component (cancelled) after 10s. 1`] = `null`;

exports[`Render ProfileFooter component (cancelled) after 10s. 2`] = `
<div
  className="b--hot-pink bb bg-purple bw2 mb1 pb3 pt4 css-vurnku"
  style={
    Object {
      "gridColumn": "1 / 13",
    }
  }
>
  <div
    className="fw4 lh-title tc white-80 css-seakmb"
  >
    I build software
    <br />
    on the pull requests
    <br />
    of giants.
  </div>
  <div
    className="justify-center mt2 hvr-wobble-vertical hvr-wobble-vertical-animating css-4cffwv"
  >
    <svg
      className="mw-5"
      fill="none"
      height="30px"
      stroke="#ff3a5c"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="30px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;

exports[`Render ProfileFooter component after 10s. 1`] = `
<div
  className="b--hot-pink bb bg-purple bw2 mb1 pb3 pt4 css-vurnku"
  style={
    Object {
      "gridColumn": "1 / 13",
    }
  }
>
  <div
    className="fw4 lh-title tc white-80 css-seakmb"
  >
    I build software
    <br />
    on the pull requests
    <br />
    of giants.
  </div>
  <div
    className="justify-center mt2 hvr-wobble-vertical hvr-wobble-vertical-animating css-4cffwv"
  >
    <svg
      className="mw-5"
      fill="none"
      height="30px"
      stroke="#ff3a5c"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="30px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;

exports[`Render ProfileFooter component. 1`] = `
<div
  className="b--hot-pink bb bg-purple bw2 mb1 pb3 pt4 css-vurnku"
  style={
    Object {
      "gridColumn": "1 / 13",
    }
  }
>
  <div
    className="fw4 lh-title tc white-80 css-seakmb"
  >
    I build software
    <br />
    on the pull requests
    <br />
    of giants.
  </div>
  <div
    className="justify-center mt2 css-4cffwv"
  >
    <svg
      className="mw-5"
      fill="none"
      height="30px"
      stroke="#ff3a5c"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="30px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;

exports[`Render ProfileFooter component. 2`] = `null`;
